sfdx-source/force-app/main/default/objects/MX_Order_Item__c/MX_Order_Item__c.object-meta.xml
<CustomObject>
    <description>LEM-13509: It is used to capture Onboarding information of Tablet related Products Items and send the request to one of the Tablet vendors</description>
    <label>Merchant Order Item</label>
    <nameField>
        <displayFormat>MXI{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchant Order Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>