sfdx-source/force-app/main/default/objects/MX_Order_Item__c/fields/Denali_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Denali_Product_Family__c</fullName>
    <description>LEM-14672 : Integration to update the information when the product/SKU selected and sent from DDMx is not available at Denali’s end and they send different product.</description>
    <label>Denali Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>