sfdx-source/force-app/main/default/objects/MX_Order_Item__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <description>LEM-13509: It is used to store the Tablet/Printer IMEI.</description>
    <externalId>true</externalId>
    <label>Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>