sfdx-source/force-app/main/default/objects/MX_Order_Item__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>LEM-16890: It is used to display Language associated to the Product Bundle.</description>
    <formula>IF(
  OR(
    Product_Family__c = $Label.Marketing_Kit_Product_Family_Name,
    Product_Family__c = $Label.Product_Bundle_Tablet
  ),
  IF(
    ISBLANK(Text(Mx_Order__r.Account__r.Preferred_Language__c)),
    $Label.Default_Mx_Order_Item_Language,
    Text(Mx_Order__r.Account__r.Preferred_Language__c)
  ),
  &apos;&apos;
)</formula>
    <label>Language</label>
    <type>Text</type>
</CustomField>