sfdx-source/force-app/main/default/objects/MX_Order_Item__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>LEM-13509: It is used by the Data Migration team as a lookup for migrating data from Figment</description>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>