sfdx-source/force-app/main/default/objects/MX_Order_Item__c/fields/Merchant_Order_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Order_Request_Type__c</fullName>
    <description>LEM-17073: Get Merchant Order Request Type</description>
    <formula>Text(Mx_Order__r.Type_Of_Request__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Order Request Type</label>
    <type>Text</type>
</CustomField>