sfdx-source/force-app/main/default/objects/MX_Order_Item__c/fields/Mx_Order__c.field-meta.xml
<CustomField>
    <fullName>Mx_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-13509: It is used to store the associated Merchant Order.</description>
    <label>Order</label>
    <referenceTo>MX_Order__c</referenceTo>
    <relationshipLabel>Merchant Order Items</relationshipLabel>
    <relationshipName>Merchant_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>