sfdx-source/force-app/main/default/objects/MX_Order_Item__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>LEM-13509: It is used to store the password of the Tablet</description>
    <formula>IF(
      TEXT(Product__r.Family) = &apos;tablet&apos;,
      Mx_Order__r.Account__r.Tablet_Password__c,
      &apos;&apos;
)</formula>
    <label>Tablet Password</label>
    <type>Text</type>
</CustomField>