sfdx-source/force-app/main/default/objects/MX_Order_Item__c/fields/Printer_IMEI__c.field-meta.xml
<CustomField>
    <fullName>Printer_IMEI__c</fullName>
    <description>LEM-13509: It is used to store the IMEI of the Printer.</description>
    <label>Printer IMEI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>