sfdx-source/force-app/main/default/objects/MX_Order_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-13509: It is used to store the Product being delivered</description>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Merchant Order Items</relationshipLabel>
    <relationshipName>Merchant_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>