sfdx-source/force-app/main/default/objects/MX_Order_Item__c/fields/Product_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Product_Bundle__c</fullName>
    <description>LEM-13509: It is used to store the Package/Product Bundle that the Order Item is associated to.</description>
    <formula>Mx_Order__r.Product_Bundle_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Bundle</label>
    <type>Text</type>
</CustomField>