sfdx-source/force-app/main/default/objects/MX_Order_Item__c/fields/QC_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>QC_Validation_Status__c</fullName>
    <description>LEM-17081: This field's value is sent by "Tablet" vendor once the defective item is received, updated via Mulesoft integration.</description>
    <label>QC Validation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>