sfdx-source/force-app/main/default/objects/MX_Order_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>LEM-13509: It is used to store the number of items of a specific Product being sent through the Order.</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>