sfdx-source/force-app/main/default/objects/MX_Order_Item__c/fields/Replacement_Reason_Validated__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Reason_Validated__c</fullName>
    <description>LEM-17081: This field's value is sent by "Tablet" vendor once the defective item is received, updated via Mulesoft integration.</description>
    <label>Replacement Reason Validated?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>