sfdx-source/force-app/main/default/objects/MX_Order_Item__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <description>LEM-13509: It is used to store the SKU of the Product that the Order Item is associated to.</description>
    <formula>Product__r.StockKeepingUnit</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU</label>
    <type>Text</type>
</CustomField>