sfdx-source/force-app/main/default/objects/MX_Order_Item__c/fields/Store_Account__c.field-meta.xml
<CustomField>
    <fullName>Store_Account__c</fullName>
    <formula>Mx_Order__r.Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Account</label>
    <type>Text</type>
</CustomField>