sfdx-source/force-app/main/default/objects/MX_Order_Item__c/fields/Store_Account_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Store_Account_ID_18__c</fullName>
    <formula>Mx_Order__r.Account__r.Account_ID18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Account ID 18</label>
    <type>Text</type>
</CustomField>