sfdx-source/force-app/main/default/objects/MX_Order_Item__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>LEM-13509: It is used to store the username of the Tablet</description>
    <formula>IF(
      TEXT(Product__r.Family) = &apos;tablet&apos;,
      Mx_Order__r.Account__r.Tablet_User_Name__c,
      &apos;&apos;
)</formula>
    <label>Tablet Username</label>
    <type>Text</type>
</CustomField>