sfdx-source/force-app/main/default/objects/MX_Order_Item__c/fields/Validated_Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Validated_Return_Reason__c</fullName>
    <description>LEM-17081: This field's value is sent by "Tablet" vendor once the defective item is received to capture the notes about actual return reason, updated via Mulesoft integration.</description>
    <label>Validated Return Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>